--- a/.github/workflows/sbom.yml
+++ b/.github/workflows/sbom.yml
@@ -203,7 +203,7 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Set up Ruby and run bundle install
-        if: ${{ inputs.run-bundle-install == true }}
+        if: ${{ inputs.language == 'ruby' }} # only run for Ruby projects where we need to generate Gemfile.lock at runtime, inputs.run-bundle-install == true 
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '3.4'
@@ -217,7 +217,7 @@ jobs:
 
       - name: generate Gemfile.lock if needed for Ruby projects
         if: ${{ inputs.language == 'ruby' }} 
-        # && inputs.run-bundle-install == true }}
+        # if: ${{ inputs.run-bundle-install == true && inputs.language == 'ruby' }}
         run: |
           if [ ! -f Gemfile.lock ]; then
             bundle install 
