Fix blackduck sca scan getting skipped
Signed-off-by: sandhi <sagarwal@progress.com>

--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -1315,7 +1315,7 @@ jobs:
   generate-sbom:
     name: 'Generating SBOM'
     #    Create software bill-of-materials (SBOM) using SPDX format
-    if: ${{ inputs.generate-sbom == true }}
+    if: ${{ inputs.generate-sbom }}
     uses: chef/common-github-actions/.github/workflows/sbom.yml@main
     needs: ci-build
     secrets: inherit
