--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -1008,6 +1008,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: checkout # TODO: fix set-application-version
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+          
       - name: Starting Black Duck Polaris scan
         run: |
           echo "Starting Polaris SAST scan"
