--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -1017,7 +1017,7 @@ jobs:
     # chef-vault at https://polaris.blackduck.com/portfolio/portfolios/8b7ad6f7-6dcb-49ec-bded-bfc4f190d4f8/portfolio-items/fe369baf-11d2-4989-bcb7-045577856dcc/projects/2460eabd-d033-48a1-a378-6cadd49be6d1/tests/sast?branchId=a6d2c02a-05f8-4557-bfa1-c40e9337ee5d
     if: ${{ inputs.perform-blackduck-polaris == true }}
     runs-on: ubuntu-latest
-    needs: ci-build
+    needs: checkout # TODO: fix set-application-version
     steps:
       - name: Checkout repository
         uses: actions/checkout@v6
@@ -1085,7 +1085,7 @@ jobs:
           #   polaris_upload_sarif_report: true
           # Mark build status if policy violating issues are found
           #   mark_build_status: 'success'
-        continue-on-error: true
+        continue-on-error: false
        
   package-binary:
     name: 'Creating packaged binaries'
@@ -1331,9 +1331,9 @@ jobs:
   generate-sbom:
     name: 'Generating SBOM'
     #    Create software bill-of-materials (SBOM) using SPDX format
-    if: ${{ inputs.generate-sbom }}
+    if: ${{ inputs.generate-sbom == true }}
     uses: chef/common-github-actions/.github/workflows/sbom.yml@main
-    needs: ci-build
+    needs: checkout # TODO: fix set-application-version
     secrets: inherit
     with:
       version: ${{ inputs.version }}
