--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -19,7 +19,7 @@ on:
         description: 'Fail the build if HIGH or CRITICAL vulnerabilities are found'
         required: false
         type: boolean
-        default: true
+        default: false
 
 jobs:
   trivy:
