--- a/.github/workflows/create-release-tag.yml
+++ b/.github/workflows/create-release-tag.yml
@@ -253,6 +253,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ needs.create-tag.outputs.new_tag }}
 
       - name: Generate release notes
         id: release_notes
