--- a/.github/workflows/ci-main-pull-request.yml
+++ b/.github/workflows/ci-main-pull-request.yml
@@ -96,17 +96,26 @@ on:
         required: false
         type: boolean
         default: true
+      fail-trufflehog-on-secrets-found:
+        description: 'Fail the pipeline if Trufflehog finds verified secrets'
+        required: false
+        type: boolean
+        default: true
       perform-trivy-scan:
         description: 'Perform Trivy scan'
         required: false
         type: boolean
         default: true
-      trivy-fail-on-high-critical:
-        description: 'Fail pipeline if Trivy finds HIGH or CRITICAL vulnerabilities'
+      trivy-fail-on-high:
+        description: 'Fail pipeline if Trivy finds HIGH vulnerabilities'
         required: false
         type: boolean
         default: false
-        
+      trivy-fail-on-critical:
+        description: 'Fail pipeline if Trivy finds CRITICAL vulnerabilities'
+        required: false
+        type: boolean
+        default: false
       build:
         description: 'CI Build (language-specific)'
         required: false
@@ -209,6 +218,16 @@ on:
         required: false
         default: true
         type: boolean
+      polaris-fail-on-high:
+        description: 'Fail the pipeline if Polaris SAST scan finds HIGH vulnerabilities'
+        required: false
+        type: boolean
+        default: false
+      polaris-fail-on-critical:
+        description: 'Fail the pipeline if Polaris SAST scan finds CRITICAL vulnerabilities'
+        required: false
+        type: boolean
+        default: false
 
       perform-sonarqube-scan: 
         description: 'Perform basic SonarQube scan'
@@ -379,6 +398,21 @@ on:
         required: false
         type: string
         default: ''
+      blackduck-fail-on-blocker:
+        description: 'Fail the pipeline if BlackDuck SCA scan finds BLOCKER vulnerabilities'
+        required: false
+        type: boolean
+        default: false
+      blackduck-fail-on-critical:
+        description: 'Fail the pipeline if BlackDuck SCA scan finds CRITICAL vulnerabilities'
+        required: false
+        type: boolean
+        default: false
+      blackduck-fail-on-major:
+        description: 'Fail the pipeline if BlackDuck SCA scan finds MAJOR vulnerabilities'
+        required: false
+        type: boolean
+        default: false
 
       udf1:
         description: 'User defined flag 1'
@@ -715,17 +749,20 @@ jobs:
   run-trufflehog:
     name: 'Trufflehog scan'
     if: ${{ inputs.perform-trufflehog-scan }}
-    uses: chef/common-github-actions/.github/workflows/trufflehog.yml@main
+    uses: chef/common-github-actions/.github/workflows/trufflehog.yml@sandhi/fix-blackduc-sca
     needs: checkout
+    with:
+      fail-trufflehog-on-secrets-found: ${{ inputs.fail-trufflehog-on-secrets-found }}
 
   run-trivy:
     name: 'Trivy scan'
     if: ${{ inputs.perform-trivy-scan }}
-    uses: chef/common-github-actions/.github/workflows/trivy.yml@main
+    uses: chef/common-github-actions/.github/workflows/trivy.yml@sandhi/fix-blackduc-sca
     needs: checkout
     with:
       version: ${{ inputs.version }}
-      fail-on-high-critical: ${{ inputs.trivy-fail-on-high-critical }}
+      trivy-fail-on-high: ${{ inputs.trivy-fail-on-high }}
+      trivy-fail-on-critical: ${{ inputs.trivy-fail-on-critical }}
   
     # run-srcclr:
     #   if: ${{ inputs.perform-srcclr-scan == true }}
@@ -939,73 +976,73 @@ jobs:
       #     # A file, directory or wildcard pattern that describes what to upload
       #     path: test/unittest/coverage.out
          
-  Sonar-public-repo:
-    name: 'PUBLIC Sonar SAST scan'
-    needs: ci-build
-    if: ${{ inputs.perform-sonarqube-scan == true && success() && inputs.visibility == 'public'}}
-    uses: chef/common-github-actions/.github/workflows/sonarqube-public-repo.yml@main
-    secrets: inherit
-    permissions:
-      id-token: write
-      contents: read
-    with:
-      perform-build: ${{ inputs.build }} # was ${{ inputs.perform-sonar-build }}
-      build-profile: ${{ inputs.build-profile }}
-      language: ${{ inputs.language }}
-      report-unit-test-coverage: ${{ inputs.report-unit-test-coverage }}
-      report-to-atlassian-dashboard: ${{ inputs.report-to-atlassian-dashboard }}
-      quality-product-name: ${{ inputs.quality-product-name }}
-      quality-sonar-app-name: ${{ inputs.quality-sonar-app-name }}
-      quality-testing-type: ${{ inputs.quality-testing-type }}
-      quality-service-name: ${{ inputs.quality-service-name }}
-      quality-junit-report: ${{ inputs.quality-junit-report }}
-      visibility: ${{ inputs.visibility }}
-      go-private-modules: ${{ inputs.go-private-modules }}
-      udf1: ${{ inputs.udf1 }}
-      udf2: ${{ inputs.udf2 }}
-      udf3: ${{ inputs.udf3 }}
+  # Sonar-public-repo:
+  #   name: 'PUBLIC Sonar SAST scan'
+  #   needs: ci-build
+  #   if: ${{ inputs.perform-sonarqube-scan == true && success() && inputs.visibility == 'public'}}
+  #   uses: chef/common-github-actions/.github/workflows/sonarqube-public-repo.yml@main
+  #   secrets: inherit
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   with:
+  #     perform-build: ${{ inputs.build }} # was ${{ inputs.perform-sonar-build }}
+  #     build-profile: ${{ inputs.build-profile }}
+  #     language: ${{ inputs.language }}
+  #     report-unit-test-coverage: ${{ inputs.report-unit-test-coverage }}
+  #     report-to-atlassian-dashboard: ${{ inputs.report-to-atlassian-dashboard }}
+  #     quality-product-name: ${{ inputs.quality-product-name }}
+  #     quality-sonar-app-name: ${{ inputs.quality-sonar-app-name }}
+  #     quality-testing-type: ${{ inputs.quality-testing-type }}
+  #     quality-service-name: ${{ inputs.quality-service-name }}
+  #     quality-junit-report: ${{ inputs.quality-junit-report }}
+  #     visibility: ${{ inputs.visibility }}
+  #     go-private-modules: ${{ inputs.go-private-modules }}
+  #     udf1: ${{ inputs.udf1 }}
+  #     udf2: ${{ inputs.udf2 }}
+  #     udf3: ${{ inputs.udf3 }}
         
-  Sonar-private-repo:
-    name: 'PRIVATE Sonar scan (inline)'
-    if: ${{ inputs.perform-sonarqube-scan == true && success() && inputs.visibility == 'private'}}
-    needs: ci-build
-    # was uses: chef/common-github-actions/.github/workflows/sonarqube-private-repo.yml@main
-    runs-on: ubuntu-latest
-    steps:
-    - name: SonarQube Scan
-      if: ${{ inputs.visibility == 'private' }}
-      uses: sonarsource/sonarqube-scan-action@v5.3.1
-      continue-on-error: true
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+  # Sonar-private-repo:
+  #   name: 'PRIVATE Sonar scan (inline)'
+  #   if: ${{ inputs.perform-sonarqube-scan == true && success() && inputs.visibility == 'private'}}
+  #   needs: ci-build
+  #   # was uses: chef/common-github-actions/.github/workflows/sonarqube-private-repo.yml@main
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - name: SonarQube Scan
+  #     if: ${{ inputs.visibility == 'private' }}
+  #     uses: sonarsource/sonarqube-scan-action@v5.3.1
+  #     continue-on-error: true
+  #     env:
+  #       SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         
-  Sonar-internal-repo:
-    name: 'INTERNAL Sonar scan'
-    if: ${{ inputs.perform-sonarqube-scan == true && inputs.visibility == 'internal'}}
-    # was if: ${{ inputs.perform-sonarqube-scan == true && success() && inputs.visibility == 'internal'}}
-    needs: ci-build
-    uses: chef/common-github-actions/.github/workflows/sonarqube-internal-repo.yml@main
-    secrets: inherit
-    permissions:
-      id-token: write
-      contents: read
-    with:
-      perform-build: ${{ inputs.build }} # was ${{ inputs.perform-sonar-build }}
-      build-profile: ${{ inputs.build-profile }}
-      language: ${{ inputs.language }}
-      report-unit-test-coverage: ${{ inputs.report-unit-test-coverage }}
-      report-to-atlassian-dashboard: ${{ inputs.report-to-atlassian-dashboard }}
-      quality-product-name: ${{ inputs.quality-product-name }}
-      quality-sonar-app-name: ${{ inputs.quality-sonar-app-name }}
-      quality-testing-type: ${{ inputs.quality-testing-type }}
-      quality-service-name: ${{ inputs.quality-service-name }}
-      quality-junit-report: ${{ inputs.quality-junit-report }}
-      visibility: ${{ inputs.visibility }}
-      go-private-modules: ${{ inputs.go-private-modules }}
-      udf1: ${{ inputs.udf1 }}
-      udf2: ${{ inputs.udf2 }}
-      udf3: ${{ inputs.udf3 }}
+  # Sonar-internal-repo:
+  #   name: 'INTERNAL Sonar scan'
+  #   if: ${{ inputs.perform-sonarqube-scan == true && inputs.visibility == 'internal'}}
+  #   # was if: ${{ inputs.perform-sonarqube-scan == true && success() && inputs.visibility == 'internal'}}
+  #   needs: ci-build
+  #   uses: chef/common-github-actions/.github/workflows/sonarqube-internal-repo.yml@main
+  #   secrets: inherit
+  #   permissions:
+  #     id-token: write
+  #     contents: read
+  #   with:
+  #     perform-build: ${{ inputs.build }} # was ${{ inputs.perform-sonar-build }}
+  #     build-profile: ${{ inputs.build-profile }}
+  #     language: ${{ inputs.language }}
+  #     report-unit-test-coverage: ${{ inputs.report-unit-test-coverage }}
+  #     report-to-atlassian-dashboard: ${{ inputs.report-to-atlassian-dashboard }}
+  #     quality-product-name: ${{ inputs.quality-product-name }}
+  #     quality-sonar-app-name: ${{ inputs.quality-sonar-app-name }}
+  #     quality-testing-type: ${{ inputs.quality-testing-type }}
+  #     quality-service-name: ${{ inputs.quality-service-name }}
+  #     quality-junit-report: ${{ inputs.quality-junit-report }}
+  #     visibility: ${{ inputs.visibility }}
+  #     go-private-modules: ${{ inputs.go-private-modules }}
+  #     udf1: ${{ inputs.udf1 }}
+  #     udf2: ${{ inputs.udf2 }}
+  #     udf3: ${{ inputs.udf3 }}
       
   BlackDuck-Polaris-SAST:
     # branding: applied at action.yml level, not workflow, see https://docs.github.com/en/actions/reference/workflows-and-actions/metadata-syntax#branding
@@ -1093,6 +1130,7 @@ jobs:
           fi
       
       - name: BlackDuck Polaris scan
+        id: polaris-scan
         uses: blackduck-inc/black-duck-security-scan@v2
         # copied from uses: prgs-community/githubactions-securityscans/polaris@v0.5 in https://github.com/prgs-community/githubactions-securityscans/blob/main/polaris/README.md
         # uses: blackduck-inc/black-duck-security-scan@805cbd09e806b01907bbea0f990723c2bb85abe9 # 2.0.0 - Jan's version
@@ -1135,6 +1173,45 @@ jobs:
           # Mark build status if policy violating issues are found
           #   mark_build_status: 'success'
         continue-on-error: false
+      
+      - name: Check Polaris scan results and fail on HIGH or CRITICAL vulnerabilities
+        if: ${{ inputs.polaris-fail-on-high == true || inputs.polaris-fail-on-critical == true }}
+        run: |
+          echo "Checking Polaris SAST scan results..."
+          echo "Enforcement policy: HIGH=${{ inputs.polaris-fail-on-high }}, CRITICAL=${{ inputs.polaris-fail-on-critical }}"
+          
+          # Parse bridge.log for vulnerability counts
+          BRIDGE_LOG=".bridge/bridge.log"
+          
+          if [ ! -f "$BRIDGE_LOG" ]; then
+            echo "⚠️  Bridge log not found - failing as precaution"
+            exit 1
+          fi
+          
+          # Extract vulnerability counts from log
+          HIGH_COUNT=$(grep -oP '"high":\s*\K\d+' "$BRIDGE_LOG" | tail -1 || echo 0)
+          CRITICAL_COUNT=$(grep -oP '"critical":\s*\K\d+' "$BRIDGE_LOG" | tail -1 || echo 0)
+          
+          echo "Found HIGH: $HIGH_COUNT, CRITICAL: $CRITICAL_COUNT"
+          
+          # Check for policy violations
+          SHOULD_FAIL=false
+          
+          if [ "${{ inputs.polaris-fail-on-critical }}" == "true" ] && [ "$CRITICAL_COUNT" -gt 0 ]; then
+            echo "❌ Found $CRITICAL_COUNT CRITICAL vulnerabilities (policy violation)"
+            SHOULD_FAIL=true
+          fi
+          
+          if [ "${{ inputs.polaris-fail-on-high }}" == "true" ] && [ "$HIGH_COUNT" -gt 0 ]; then
+            echo "❌ Found $HIGH_COUNT HIGH vulnerabilities (policy violation)"
+            SHOULD_FAIL=true
+          fi
+          
+          if [ "$SHOULD_FAIL" == "true" ]; then
+            exit 1
+          else
+            echo "✅ No policy-violating vulnerabilities found"
+          fi
        
   package-binary:
     name: 'Creating packaged binaries'
@@ -1381,7 +1458,7 @@ jobs:
     name: 'Generating SBOM'
     #    Create software bill-of-materials (SBOM) using SPDX format
     if: ${{ inputs.generate-sbom == true }}
-    uses: chef/common-github-actions/.github/workflows/sbom.yml@main
+    uses: chef/common-github-actions/.github/workflows/sbom.yml@sandhi/fix-blackduc-sca
     needs: checkout # TODO: fix set-application-version
     secrets: inherit
     with:
@@ -1398,6 +1475,9 @@ jobs:
       run-bundle-install: ${{ inputs.run-bundle-install }} # Passed to sbom.yml to generate Gemfile.lock at runtime
       language: ${{ inputs.language }}
       ruby-app-directory: ${{ inputs.ruby-app-directory }}
+      blackduck-fail-on-blocker: ${{ inputs.blackduck-fail-on-blocker }}
+      blackduck-fail-on-critical: ${{ inputs.blackduck-fail-on-critical }}
+      blackduck-fail-on-major: ${{ inputs.blackduck-fail-on-major }}
 
   quality-dashboard:
     name: 'Reporting to quality dashboard'
