--- a/.github/workflows/grype.yml
+++ b/.github/workflows/grype.yml
@@ -30,60 +30,97 @@ jobs:
         uses: actions/checkout@v6
         with:
           fetch-depth: 0
+      
+      - name: Configure git for private
+        env:
+          GOPRIVATE: ${{ inputs.go-private-modules }}
+        run: git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "https://github.com/"
 
       - name: Install Grype
         run: |
           curl -sSfL https://get.anchore.io/grype | sh -s -- -b /usr/local/bin
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: us-east-2
+
       - name: Login to Amazon ECR
-        id: ecr-login
-        continue-on-error: false
-        run: |
-          aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 448877188565.dkr.ecr.us-east-2.amazonaws.com
-          echo "ecr_authenticated=true" >> $GITHUB_OUTPUT
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Check for Dockerfile and build image if found
-        id: docker-build
-        continue-on-error: false
-        run: |
-          if [ -f "Dockerfile" ]; then
-            echo "Dockerfile found, attempting to build Docker image..."
-            if docker build -t grype-scan-image:latest .; then
-              echo "scan_target=grype-scan-image:latest" >> $GITHUB_OUTPUT
-              echo "scan_type=image" >> $GITHUB_OUTPUT
-            else
-              echo "Docker build failed, falling back to directory scan"
-              echo "scan_target=." >> $GITHUB_OUTPUT
-              echo "scan_type=dir" >> $GITHUB_OUTPUT
-            fi
-          else
-            echo "No Dockerfile found, will scan source directory"
-            echo "scan_target=." >> $GITHUB_OUTPUT
-            echo "scan_type=dir" >> $GITHUB_OUTPUT
-          fi
-
-      - name: Run Grype scan
+      - name: Scan with Grype
         id: grype-scan
-        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          SCAN_TARGET="${{ steps.docker-build.outputs.scan_target }}"
-          SCAN_TYPE="${{ steps.docker-build.outputs.scan_type }}"
           SCAN_NAME="${{ github.repository }}"
           
-          echo "Scan type: $SCAN_TYPE"
-          echo "Scan target: $SCAN_TARGET"
-          echo "Scan name: $SCAN_NAME"
-          
-          # Scan based on type
-          if [ "$SCAN_TYPE" == "image" ]; then
-            echo "Scanning Docker image..."
-            grype $SCAN_TARGET --name "$SCAN_NAME" --output json > grype-scan.json 2>&1
-            grype $SCAN_TARGET --name "$SCAN_NAME" --output table > grype-scan.log 2>&1 || true
-          else
-            echo "Scanning source directory..."
-            grype dir:$SCAN_TARGET --name "$SCAN_NAME" --output json > grype-scan.json 2>&1
-            grype dir:$SCAN_TARGET --name "$SCAN_NAME" --output table > grype-scan.log 2>&1 || true
+          if [ ! -f "Dockerfile" ]; then
+            echo "❌ No Dockerfile found - this workflow requires a Dockerfile to scan Docker image"
+            exit 1
           fi
+          
+          echo "Building Docker image..."
+          REPO_NAME=$(basename $(pwd))
+          
+          # Strategy 1: Check for build-docker.sh script (e.g., dsm-erchef)
+          if [ -f "build-docker.sh" ]; then
+            echo "Found build-docker.sh script - using it to build images"
+            chmod +x build-docker.sh
+            GITHUB_TOKEN="${{ secrets.GH_TOKEN }}" ./build-docker.sh
+            
+            # Detect all images built (typically repo name or repo-name-init)
+            IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -E "^${REPO_NAME}" | grep -v "^<none>")
+            
+            if [ -z "$IMAGES" ]; then
+              echo "⚠️ No images found with prefix ${REPO_NAME} after build-docker.sh"
+              echo "Checking for any recently built images..."
+              IMAGES=$(docker images --format "{{.CreatedAt}}\t{{.Repository}}:{{.Tag}}" | sort -r | head -5 | cut -f2 | grep -v "^<none>")
+            fi
+          # Strategy 2: Check for Makefile with compose-build target (e.g., chef-platform-user-accounts-service)
+          elif [ -f "Makefile" ] && grep -q "^compose-build:" Makefile; then
+            echo "Using Makefile compose-build target with GITHUB_TOKEN"
+            export GITHUB_TOKEN="${{ secrets.GH_TOKEN }}"
+            make compose-build
+            
+            echo "Detecting built images..."
+            docker compose images
+            
+            IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep "^${REPO_NAME}" | grep -v "^<none>")
+            
+            if [ -z "$IMAGES" ]; then
+              echo "No images found with prefix ${REPO_NAME}, scanning all recent images"
+              IMAGES=$(docker images --format "{{.Repository}}:{{.Tag}}" | grep -v "^<none>" | head -5)
+            fi
+          # Strategy 3: Fallback to standard docker build
+          else
+            echo "Using standard docker build with GITHUB_TOKEN build arg"
+            docker build --build-arg GITHUB_TOKEN="${{ secrets.GH_TOKEN }}" -t "${REPO_NAME}:latest" .
+            IMAGES="${REPO_NAME}:latest"
+          fi
+          
+          if [ -z "$IMAGES" ]; then
+            echo "❌ No Docker images found after build"
+            exit 1
+          fi
+          
+          echo "Found images to scan:"
+          echo "$IMAGES"
+          
+          # Scan all images and combine results into single files
+          > grype-scan.json  # Initialize empty JSON file
+          > grype-scan.log   # Initialize empty log file
+          
+          for IMAGE_NAME in $IMAGES; do
+            echo ""
+            echo "Scanning Docker image: $IMAGE_NAME"
+            grype "$IMAGE_NAME" --name "$SCAN_NAME-$(basename $IMAGE_NAME)" --output json >> grype-scan.json
+            grype "$IMAGE_NAME" --name "$SCAN_NAME-$(basename $IMAGE_NAME)" --output table >> grype-scan.log || true
+          done
 
       - name: Check Grype results and fail if vulnerabilities found
         if: ${{ always() && (inputs.fail-grype-on-high == true || inputs.fail-grype-on-critical == true) }}
@@ -95,15 +132,10 @@ jobs:
             exit 0
           fi
           
-          # Extract vulnerability counts by severity from JSON using jq
-          if command -v jq &> /dev/null; then
-            CRITICAL_COUNT=$(jq '[.matches[]? | select(.vulnerability.severity == "Critical")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
-            HIGH_COUNT=$(jq '[.matches[]? | select(.vulnerability.severity == "High")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
-          else
-            # Fallback to grep if jq not available
-            CRITICAL_COUNT=$(grep -o '"severity":"Critical"' "$JSON_FILE" | wc -l | tr -d ' ' || echo "0")
-            HIGH_COUNT=$(grep -o '"severity":"High"' "$JSON_FILE" | wc -l | tr -d ' ' || echo "0")
-          fi
+          # Extract vulnerability counts by severity from multiple JSON documents
+          # Use jq -s to slurp all JSON objects and combine matches
+          CRITICAL_COUNT=$(jq -s '[.[] | .matches[]? | select(.vulnerability.severity == "Critical")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
+          HIGH_COUNT=$(jq -s '[.[] | .matches[]? | select(.vulnerability.severity == "High")] | length' "$JSON_FILE" 2>/dev/null || echo "0")
           
           echo ""
           echo "============================================"
